Add side-server TypeScript file patterns to tsconfig

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,6 +35,8 @@
         "./lib/*.ts",
         "./server/**/*.ts",
         "./server/**/*.tsx",
+        "./side-server/**/*.ts",
+        "./side-server/**/*.tsx",
         "./sim/**/*",
         "./tools/set-import/*.ts",
         "./tools/modlog/*.ts",
